Fixar lint-fel